force-app/main/default/objects/copado__Selenium_Test_Run__c/fields/copado__Selenium_Settings__c.field-meta.xml
<CustomField>
    <fullName>copado__Selenium_Settings__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Copado will run the Test Suites for each of the selected Platforms in these Settings.</inlineHelpText>
    <label>Selenium Settings</label>
    <referenceTo>copado__Selenium_Settings__c</referenceTo>
    <relationshipLabel>Selenium Test Runs</relationshipLabel>
    <relationshipName>Selenium_Test_Runs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>