force-app/main/default/objects/copado__Selenium_Test_Run__c/fields/copado__Selenium_Test_Group__c.field-meta.xml
<CustomField>
    <fullName>copado__Selenium_Test_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This field should not be populated.  The value is automatically maintained.</inlineHelpText>
    <label>Selenium Test Group</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>copado__Selenium_Test_Group__c.copado__Manage_Test_Runs_manually__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>copado__Selenium_Test_Group__c</referenceTo>
    <relationshipLabel>Selenium Test Runs</relationshipLabel>
    <relationshipName>Selenium_Test_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>