force-app/main/default/objects/copado__Selenium_Test_Run__c/fields/copado__Selenium_Test_Suite__c.field-meta.xml
<CustomField>
    <fullName>copado__Selenium_Test_Suite__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Selenium Test Suite</label>
    <referenceTo>copado__Selenium_Test_Suite__c</referenceTo>
    <relationshipLabel>Selenium Test Runs</relationshipLabel>
    <relationshipName>Selenium_Test_Runs</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>